# teamapt-monnify

./: README.md  requirements.txt  setup.cfg  setup.py  test.py  test2.py
monnify/: getlive.py  monnify.py  monnify_details.py
teamapt_monnify.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
