[metadata]
# replace with your username:
name = teamapt-monnify
version = 1.1.0
url = https://github.com/samkayz/teamapt-monnify/tree/v2
author = Samson Ilemobayo
author_email = ilemobayosamson@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = TeamApt Monnify Python Library
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6